--- a/web/index.html
+++ b/web/index.html
@@ -2,26 +2,26 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Home | Autotransport</title>
+    <title>Автотранспорт</title>
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
     <header>
-        <h1>Autotransport</h1>
+        <h1>Автотранспорт</h1>
     </header>
     <main>
         <div class="main-cards">
             <div class="card">
                 <h2>Dashboard</h2>
-                <a href="./dashboard" class="button">Go to Dashboard</a>
+                <a href="./dashboard" class="button">Табло</a>
             </div>
             <div class="card">
                 <h2>Trips</h2>
-                <a href="./trips" class="button">Go to Trips</a>
+                <a href="./trips" class="button">Ангажименти</a>
             </div>
             <div class="card">
                 <h2>Cars</h2>
-                <a href="./cars" class="button">Go to Cars</a>
+                <a href="./cars" class="button">Автомобили</a>
             </div>
         </div>
     </main>
