--- a/web/cars.html
+++ b/web/cars.html
@@ -2,45 +2,64 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Cars | Autotransport</title>
+    <title>Автомобили</title>
     <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
 <body>
     <header>
-        <h1>Cars</h1>
+        <h1>Автомобили</h1>
     </header>
     <main>
-        <button onclick="goHome()">Home</button>
-        <div class="container" id="carList"></div>
-        <button id="addCarButton">Add Car</button>
-        <form id="editCarForm" style="display: none;">
+        <button class="btn-primary" onclick="goHome()">Начало</button>
+        <div class="container">
+            <table id="carList" class="azure-table">
+                <thead>
+                    <tr>
+                        <th>Car Model</th>
+                        <th>Actions</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <!-- Car models will be populated here -->
+                </tbody>
+            </table>
+        </div>
+        <button id="addCarButton" class="btn-primary">Добави автомобил</button>
+        <form id="editCarForm" class="form-hidden">
             <input type="text" id="editCarName" placeholder="Car Name">
             <input type="hidden" id="editCarId">
-            <button type="button" onclick="updateCarModel()">Save</button>
-            <button type="button" onclick="hideEditForm()">Cancel</button>
+            <button type="button" class="btn-primary" onclick="updateCarModel()">Запиши</button>
+            <button type="button" class="btn-secondary" onclick="hideEditForm()">Откажи</button>
         </form>
     </main>
     <script>
         function goHome() {
-            window.location.href = '/autotransport/'; 
+            window.location.href = '/web/'; 
         }
         async function fetchCarModels() {
-            const response = await fetch('api/cars');
+            const response = await fetch('/api/cars');
             const carModels = await response.json();
-            const carListDiv = document.getElementById('carList');
-            carListDiv.innerHTML = '';
+            const carListTbody = document.getElementById('carList').querySelector('tbody');
+            carListTbody.innerHTML = '';
             carModels.forEach(carModel => {
-                const carDiv = document.createElement('div');
-                carDiv.textContent = carModel.name;
+                const row = document.createElement('tr');
+                const nameCell = document.createElement('td');
+                nameCell.textContent = carModel.name;
+                const actionsCell = document.createElement('td');
                 const editButton = document.createElement('button');
-                editButton.textContent = 'Edit';
+                editButton.className = 'btn-icon';
+                editButton.innerHTML = '<i class="fas fa-edit"></i>';
                 editButton.onclick = () => showEditForm(carModel.id, carModel.name);
                 const deleteButton = document.createElement('button');
-                deleteButton.textContent = 'Delete';
+                deleteButton.className = 'btn-icon';
+                deleteButton.innerHTML = '<i class="fas fa-trash-alt"></i>';
                 deleteButton.onclick = () => deleteCarModel(carModel.id);
-                carDiv.appendChild(editButton);
-                carDiv.appendChild(deleteButton);
-                carListDiv.appendChild(carDiv);
+                actionsCell.appendChild(editButton);
+                actionsCell.appendChild(deleteButton);
+                row.appendChild(nameCell);
+                row.appendChild(actionsCell);
+                carListTbody.appendChild(row);
             });
         }
 
@@ -49,7 +68,7 @@
         document.getElementById('addCarButton').addEventListener('click', () => {
             const newCarName = prompt('Enter the name of the new car:');
             if (newCarName) {
-                fetch('api/cars', {
+                fetch('/api/cars', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json'
@@ -71,19 +90,19 @@
         });
 
         function showEditForm(carId, carName) {
-            document.getElementById('editCarForm').style.display = 'block';
+            document.getElementById('editCarForm').classList.remove('form-hidden');
             document.getElementById('editCarName').value = carName;
             document.getElementById('editCarId').value = carId;
         }
 
         function hideEditForm() {
-            document.getElementById('editCarForm').style.display = 'none';
+            document.getElementById('editCarForm').classList.add('form-hidden');
         }
 
         function updateCarModel() {
             const carId = document.getElementById('editCarId').value;
             const newName = document.getElementById('editCarName').value;
-            fetch(`api/cars/${carId}`, {
+            fetch(`/api/cars/${carId}`, {
                 method: 'PUT',
                 headers: {
                     'Content-Type': 'application/json'
@@ -107,7 +126,7 @@
         function deleteCarModel(carId) {
             const confirmDelete = confirm('Are you sure you want to delete this car model?');
             if (confirmDelete) {
-                fetch(`api/cars/${carId}`, {
+                fetch(`/api/cars/${carId}`, {
                     method: 'DELETE'
                 })
                 .then(response => {
