--- a/web/trips.html
+++ b/web/trips.html
@@ -2,61 +2,61 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Trips | Autotransport</title>
+    <title>Ангажименти</title>
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
     <header>
-        <h1>Trips</h1>
+        <h1>Ангажименти</h1>
     </header>
     <main>
-        <button onclick="goHome()">Home</button>
+        <button class="btn-primary" onclick="goHome()">Начало</button>
         <div class="container">
-            <table id="tripList">
+            <table id="tripList" class="azure-table">
                 <thead>
                     <tr>
-                        <th>Car Model</th>
-                        <th>Department</th>
-                        <th>Usage Date</th>
-                        <th>Destination</th>
-                        <th>Action</th>
+                        <th>Автомобил</th>
+                        <th>Дирекция</th>
+                        <th>Период</th>
+                        <th>Маршрут</th>
+                        <th>Действие</th>
                     </tr>
                 </thead>
                 <tbody></tbody>
             </table>
         </div>
-        <form id="editTripForm" style="display: none;">
-            <label for="editCarSelect">Select a Car Model:</label>
+        <form id="editTripForm" class="form-hidden">
+            <label for="editCarSelect">Избери модел:</label>
             <select id="editCarSelect"></select>
             <input type="text" id="editDepartment" placeholder="Department">
             <input type="date" id="editUsageDate">
             <input type="text" id="editDestination" placeholder="Destination">
             <input type="hidden" id="editTripId">
-            <button type="button" onclick="updateTrip()">Save</button>
-            <button type="button" onclick="hideEditForm()">Cancel</button>
+            <button type="button" class="btn-primary" onclick="updateTrip()">Запиши</button>
+            <button type="button" class="btn-secondary" onclick="hideEditForm()">Откажи</button>
         </form>
-        <button id="addButton">Add Trip</button>
+        <button id="addButton" class="btn-primary">Добави ангажимент</button>
     </main>
     <script>
         function goHome() {
-            window.location.href = '/autotransport/'; 
+            window.location.href = '/web/'; 
         }
         async function fetchTrips() {
-            const response = await fetch('./api/bookings');
+            const response = await fetch('/api/bookings');
             const trips = await response.json();
             const tripListTbody = document.getElementById('tripList').getElementsByTagName('tbody')[0];
             tripListTbody.innerHTML = '';
             trips.forEach(trip => {
                 trip.bookings.forEach(booking => {
                     const row = document.createElement('tr');
-                    row.innerHTML = `<td>${booking.car_model_name}</td><td>${booking.department}</td><td>${booking.usage_date}</td><td>${booking.destination}</td><td><button onclick="showEditForm(${booking.id}, ${booking.car_model_id}, '${booking.department}', '${booking.usage_date}', '${booking.destination}')">Edit</button><button onclick="deleteTrip(${booking.id})">Delete</button></td>`;
+                    row.innerHTML = `<td>${booking.car_model_name}</td><td>${booking.department}</td><td>${booking.usage_date}</td><td>${booking.destination}</td><td><button class="btn-icon" onclick="showEditForm(${booking.id}, ${booking.car_model_id}, '${booking.department}', '${booking.usage_date}', '${booking.destination}')"><i class="fas fa-edit"></i></button><button class="btn-icon" onclick="deleteTrip(${booking.id})"><i class="fas fa-trash-alt"></i></button></td>`;
                     tripListTbody.appendChild(row);
                 });
             });
         }
 
         async function fetchCarModels() {
-            const response = await fetch('api/cars');
+            const response = await fetch('/api/cars');
             const carModels = await response.json();
             const carSelect = document.getElementById('editCarSelect');
             carSelect.innerHTML = '';
@@ -74,7 +74,7 @@
         };
 
         function showEditForm(tripId, carModelId, department, usageDate, destination) {
-            document.getElementById('editTripForm').style.display = 'block';
+            document.getElementById('editTripForm').classList.remove('form-hidden');
             document.getElementById('editCarSelect').value = carModelId;
             document.getElementById('editDepartment').value = department;
             document.getElementById('editUsageDate').value = usageDate;
@@ -83,7 +83,7 @@
         }
 
         function hideEditForm() {
-            document.getElementById('editTripForm').style.display = 'none';
+            document.getElementById('editTripForm').classList.add('form-hidden');
         }
 
         function updateTrip() {
@@ -93,7 +93,7 @@
             const usageDate = document.getElementById('editUsageDate').value;
             const destination = document.getElementById('editDestination').value;
 
-            fetch(`api/bookings/${tripId}`, {
+            fetch(`/api/bookings/${tripId}`, {
                 method: 'PUT',
                 headers: {
                     'Content-Type': 'application/json'
@@ -122,7 +122,7 @@
         function deleteTrip(tripId) {
             const confirmDelete = confirm('Are you sure you want to delete this trip?');
             if (confirmDelete) {
-                fetch(`api/bookings/${tripId}`, {
+                fetch(`/api/bookings/${tripId}`, {
                     method: 'DELETE'
                 })
                 .then(response => {
