--- a/web/dashboard.html
+++ b/web/dashboard.html
@@ -2,47 +2,205 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Табло</title>
+    <title>Ангажименти</title>
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
     <header>
-        <h1>Табло</h1>
+        <div class="header-container">
+            <h1>Информационно табло - отдел "Автотранспорт"</h1>
+            <a href="./" class="button">Начало</a>
+        </div>
     </header>
     <main>
-        <button class="btn-primary" onclick="goHome()">Начало</button>
         <div class="container">
-            <ul id="car-tree" class="car-tree"></ul>
+            <table id="tripList" class="azure-table">
+                <thead>
+                    <tr>
+                        <th class="car-column">Автомобил</th>
+                        <th>Дирекция-заявител</th>
+                        <th>Период на ползване</th>
+                        <th>Дестинация</th>
+                        <th class="action-column">Действие</th>
+                    </tr>
+                </thead>
+                <tbody></tbody>
+            </table>
         </div>
+        <form id="editTripForm" class="form-hidden">
+            <label for="editCarSelect">Избери модел:</label>
+            <select id="editCarSelect"></select>
+            <input type="text" id="editDepartment" placeholder="Дирекция-заявител">
+            <input type="text" id="editUsageDate" placeholder="Период на ползване">
+            <input type="text" id="editDestination" placeholder="Дестинация">
+            <input type="hidden" id="editTripId">
+            <button type="button" class="btn-primary" onclick="saveTrip()">Запиши</button>
+            <button type="button" class="btn-secondary" onclick="hideEditForm()">Откажи</button>
+        </form>
+        <button id="addButton" class="btn-primary" onclick="showAddForm()">Добави ангажимент</button>
     </main>
     <script>
-        function goHome() {
-            window.location.href = '/web/';
+        const adminPassword = 'dragofib';
+        let isAdmin = false;
+
+        window.onload = () => {
+            isAdmin = prompt("Please enter the admin password:") === adminPassword;
+            if (!isAdmin) {
+                document.querySelectorAll('.action-column').forEach(el => el.style.display = 'none');
+            }
+            fetchTrips();
+            fetchCarModels();
+            setInterval(fetchTrips, 60000); // Update the table every minute
+        };
+
+        async function fetchTrips() {
+            const response = await fetch('/api/bookings');
+            const trips = await response.json();
+            const tripListTbody = document.getElementById('tripList').getElementsByTagName('tbody')[0];
+            tripListTbody.innerHTML = '';
+
+            trips.forEach(trip => {
+                if (trip.bookings.length === 0) return;
+
+                const rowSpan = trip.bookings.length;
+                const carRow = document.createElement('tr');
+                const carCell = document.createElement('td');
+                carCell.textContent = trip.car_model;
+                carCell.rowSpan = rowSpan;
+                carCell.classList.add('car-cell');
+                carRow.appendChild(carCell);
+
+                const firstBooking = trip.bookings[0];
+                carRow.innerHTML += `
+                    <td>${firstBooking.department}</td>
+                    <td>${firstBooking.usage_date}</td>
+                    <td>${firstBooking.destination}</td>
+                `;
+
+                if (isAdmin) {
+                    carRow.innerHTML += `
+                        <td>
+                            <button class="btn-icon btn-small" onclick="showEditForm(${firstBooking.id}, ${firstBooking.car_model_id}, '${firstBooking.department}', '${firstBooking.usage_date}', '${firstBooking.destination}')">Промени</button>
+                            <button class="btn-icon btn-small" onclick="deleteTrip(${firstBooking.id})">Изтрий</button>
+                        </td>
+                    `;
+                }
+
+                tripListTbody.appendChild(carRow);
+
+                for (let i = 1; i < trip.bookings.length; i++) {
+                    const booking = trip.bookings[i];
+                    const bookingRow = document.createElement('tr');
+                    bookingRow.innerHTML += `
+                        <td>${booking.department}</td>
+                        <td>${booking.usage_date}</td>
+                        <td>${booking.destination}</td>
+                    `;
+
+                    if (isAdmin) {
+                        bookingRow.innerHTML += `
+                            <td>
+                                <button class="btn-icon btn-small" onclick="showEditForm(${booking.id}, ${booking.car_model_id}, '${booking.department}', '${booking.usage_date}', '${booking.destination}')">Промени</button>
+                                <button class="btn-icon btn-small" onclick="deleteTrip(${booking.id})">Изтрий</button>
+                            </td>
+                        `;
+                    }
+
+                    tripListTbody.appendChild(bookingRow);
+                }
+            });
         }
 
-        fetch('/api/bookings')
-            .then(response => response.json())
-            .then(data => {
-                const carTree = document.querySelector('#car-tree');
-                data.forEach(car => {
-                    const carNode = document.createElement('li');
-                    carNode.classList.add('car-item');
-                    carNode.innerHTML = `<span class="car-model">${car.car_model}</span>`;
-
-                    const bookingList = document.createElement('ul');
-                    bookingList.classList.add('booking-list');
-
-                    car.bookings.forEach((booking, index) => {
-                        const bookingNode = document.createElement('li');
-                        bookingNode.classList.add('booking-item');
-                        bookingNode.innerHTML = `<span>Trip ${index + 1}:</span> <span>Department: ${booking.department}</span>, <span>Usage Date: ${booking.usage_date}</span>, <span>Destination: ${booking.destination}</span>`;
-                        bookingList.appendChild(bookingNode);
-                    });
-
-                    carNode.appendChild(bookingList);
-                    carTree.appendChild(carNode);
-                });
+        async function fetchCarModels() {
+            const response = await fetch('/api/cars');
+            const carModels = await response.json();
+            const carSelect = document.getElementById('editCarSelect');
+            carSelect.innerHTML = '';
+            carModels.forEach(carModel => {
+                const option = document.createElement('option');
+                option.value = carModel.id;
+                option.textContent = carModel.name;
+                carSelect.appendChild(option);
             });
+        }
+
+        function showEditForm(tripId, carModelId, department, usageDate, destination) {
+            document.getElementById('editTripForm').classList.remove('form-hidden');
+            document.getElementById('editCarSelect').value = carModelId;
+            document.getElementById('editDepartment').value = department;
+            document.getElementById('editUsageDate').value = usageDate;
+            document.getElementById('editDestination').value = destination;
+            document.getElementById('editTripId').value = tripId;
+        }
+
+        function hideEditForm() {
+            document.getElementById('editTripForm').classList.add('form-hidden');
+        }
+
+        function showAddForm() {
+            document.getElementById('editTripForm').classList.remove('form-hidden');
+            document.getElementById('editCarSelect').value = '';
+            document.getElementById('editDepartment').value = '';
+            document.getElementById('editUsageDate').value = '';
+            document.getElementById('editDestination').value = '';
+            document.getElementById('editTripId').value = '';
+        }
+
+        function saveTrip() {
+            const tripId = document.getElementById('editTripId').value;
+            const carModelId = parseInt(document.getElementById('editCarSelect').value);
+            const department = document.getElementById('editDepartment').value;
+            const usageDate = document.getElementById('editUsageDate').value;
+            const destination = document.getElementById('editDestination').value;
+
+            const url = tripId ? `/api/bookings/${tripId}` : '/api/bookings';
+            const method = tripId ? 'PUT' : 'POST';
+
+            fetch(url, {
+                method: method,
+                headers: {
+                    'Content-Type': 'application/json'
+                },
+                body: JSON.stringify({ 
+                    car_model_id: carModelId, 
+                    department: department, 
+                    usage_date: usageDate,
+                    destination: destination
+                })
+            })
+            .then(response => {
+                if (response.ok) {
+                    fetchTrips(); 
+                    hideEditForm();
+                } else {
+                    alert('Failed to save trip');
+                }
+            })
+            .catch(error => {
+                console.error('Error saving trip:', error);
+                alert('Error saving trip');
+            });
+        }
+
+        function deleteTrip(tripId) {
+            const confirmDelete = confirm('Are you sure you want to delete this trip?');
+            if (confirmDelete) {
+                fetch(`/api/bookings/${tripId}`, {
+                    method: 'DELETE'
+                })
+                .then(response => {
+                    if (response.ok) {
+                        fetchTrips();
+                    } else {
+                        alert('Failed to delete trip');
+                    }
+                })
+                .catch(error => {
+                    console.error('Error deleting trip:', error);
+                    alert('Error deleting trip');
+                });
+            }
+        }
     </script>
 </body>
 </html>
