--- a/web/index.html
+++ b/web/index.html
@@ -7,20 +7,16 @@
 </head>
 <body>
     <header>
-        <h1>Автотранспорт</h1>
+        <div class="header-container">
+            <h1>Дирекция "Административна" - отдел "Автотранспорт"</h1>
+        </div>
     </header>
     <main>
         <div class="main-cards">
             <div class="card">
-                <h2>Dashboard</h2>
-                <a href="./dashboard" class="button">Табло</a>
+                <a href="./dashboard" class="button">Информационно табло</a>
             </div>
             <div class="card">
-                <h2>Trips</h2>
-                <a href="./trips" class="button">Ангажименти</a>
-            </div>
-            <div class="card">
-                <h2>Cars</h2>
                 <a href="./cars" class="button">Автомобили</a>
             </div>
         </div>
