--- a/web/dashboard.html
+++ b/web/dashboard.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Ангажименти</title>
+    <title>Информационно табло</title>
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
